exchage-rates directive added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,9 +12,10 @@
       <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
     </mat-form-field>
 
+    <mat-checkbox class="example-margin" (change)="searchByFavourites($event)">Only favourites!</mat-checkbox>
 
     <mat-grid-list cols="4" rowHeight="500" *ngIf="products$ | async as products; else loader">
-      <mat-grid-tile *ngFor="let product of products | productsFilter: searchTerm; odd as isOdd">
+      <mat-grid-tile *ngFor="let product of products | productsFilter: searchTerm: onlyFavourites; odd as isOdd">
         <course-product-card [product]="product" [isOdd]="isOdd"></course-product-card>
       </mat-grid-tile>
     </mat-grid-list>
