--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,7 +7,8 @@
     <span>{{titleText}}</span>
   </div>
 
-  <div>
+  <div fxLayout="row" fxLayoutAlign="space-between center">
+    <course-exchange-rates [rates]="exchangeRates"></course-exchange-rates>
     <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
       <mat-icon>favorite</mat-icon>
     </button>
