--- a/src/app/content/backoffice/sidenav/sidenav.component.html
+++ b/src/app/content/backoffice/sidenav/sidenav.component.html
@@ -3,8 +3,7 @@
     <ng-content select=".list"></ng-content>
   </mat-drawer>
   <mat-drawer-content>
-    <div #container></div>
-<!--    <ng-content></ng-content>-->
+    <ng-content></ng-content>
   </mat-drawer-content>
 </mat-drawer-container>
 
