--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,31 +1,3 @@
-<course-header [titleText]="title" [sideNavDrawer]="drawer"></course-header>
-
-<course-sidenav (setDrawer)="setSideNav($event)">
-  <ng-template #contentTemplate>
-<!--    <pre>{{products | json}}</pre>-->
-<!--    <pre>{{products$ | async | json}}</pre>-->
-
-
-    <mat-form-field appearance="legacy">
-      <mat-label>Search products</mat-label>
-      <input matInput placeholder="search text" (input)="search($event)">
-      <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
-    </mat-form-field>
-
-    <mat-checkbox class="example-margin" (change)="searchByFavourites($event)">Only favourites!</mat-checkbox>
-
-    <mat-grid-list cols="4" rowHeight="500" *ngIf="products$ | async as products; else loader">
-      <mat-grid-tile *ngFor="let product of products | productsFilter: searchTerm: onlyFavourites; odd as isOdd">
-        <course-product-card [product]="product" [isOdd]="isOdd"></course-product-card>
-      </mat-grid-tile>
-    </mat-grid-list>
-
-    <ng-template #loader>
-      <div class="loader-container">
-        <mat-spinner></mat-spinner>
-      </div>
-    </ng-template>
-  </ng-template>
-</course-sidenav>
+<router-outlet></router-outlet>
 
 <course-modal></course-modal>
