--- a/src/app/content/backoffice/content/products/product-card/product-card.component.html
+++ b/src/app/content/backoffice/content/products/product-card/product-card.component.html
@@ -4,7 +4,9 @@
     <mat-card-title>{{product.title}}</mat-card-title>
     <mat-card-subtitle>{{product.price | currency: 'USD'}}</mat-card-subtitle>
   </mat-card-header>
-  <img mat-card-image [src]="product.img" [alt]="product.title">
+  <img mat-card-image
+       [routerLink]="['./', product._id]"
+       [src]="product.img" [alt]="product.title">
   <mat-card-actions>
     <button mat-button (click)="addToCart()">Add to Card</button>
   </mat-card-actions>
