--- a/src/app/content/backoffice/content/products/products.component.html
+++ b/src/app/content/backoffice/content/products/products.component.html
@@ -6,14 +6,12 @@
 
 <mat-checkbox class="example-margin" (change)="searchByFavourites($event)">Only favourites!</mat-checkbox>
 
-<mat-grid-list cols="4" rowHeight="500" *ngIf="products$ | async as products; else loader">
+<mat-grid-list cols="4" rowHeight="500" *ngIf="products$ | async as products">
   <mat-grid-tile *ngFor="let product of products | productsFilter: searchTerm: onlyFavourites; odd as isOdd">
     <course-product-card [product]="product" [isOdd]="isOdd"></course-product-card>
   </mat-grid-tile>
 </mat-grid-list>
 
-<ng-template #loader>
-  <div class="loader-container">
-    <mat-spinner></mat-spinner>
-  </div>
-</ng-template>
+<div class="loader-container" *ngIf="isLoading$ | async">
+  <mat-spinner></mat-spinner>
+</div>
