--- a/src/app/content/backoffice/header/header.component.html
+++ b/src/app/content/backoffice/header/header.component.html
@@ -9,11 +9,8 @@
 
   <div fxLayout="row" fxLayoutAlign="space-between center">
     <course-exchange-rates [rates]="exchangeRates"></course-exchange-rates>
-    <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
-      <mat-icon>favorite</mat-icon>
-    </button>
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
-      <mat-icon>share</mat-icon>
+    <button mat-icon-button [routerLink]="['/backoffice/cart']">
+      <mat-icon [matBadge]="cartProductsCount$ | async" [matBadgeColor]="'warn'">shopping_cart</mat-icon>
     </button>
   </div>
 </mat-toolbar>
